--- a/home.html
+++ b/home.html
@@ -1,9 +1,10 @@
 <HTML>
 <div class="topnav">
-  <a href="https://harmonkj.github.io/CSS-Review/index.html">Home</a>
-  <a href="https://harmonkj.github.io/CSS-Review/about.html">About</a>
-  <a href="https://harmonkj.github.io/CSS-Review/products.html">Products</a>
-  <a href="https://harmonkj.github.io/CSS-Review/contact.html">Contact</a>
+  <a href="https://harmonkj.github.io/cssspacing/home.html">Home</a>
+  <a href="https://harmonkj.github.io/cssspacing/page2.html">Page 2</a>
+  <a href="https://harmonkj.github.io/cssspacing/page3.html">Page 3</a>
+  <a href="https://harmonkj.github.io/cssspacing/page4.html">Page 4</a>
+   <a href="https://harmonkj.github.io/cssspacing/page5.html">Page 5</a>
 </div>
 <!DOCTYPE html>
 <html>
