--- a/page2.html
+++ b/page2.html
@@ -1,1 +1,55 @@
+<HTML>
+<div class="topnav">
+  <a href="https://harmonkj.github.io/cssspacing/home.html">Home</a>
+  <a href="https://harmonkj.github.io/cssspacing/page2.html">Page 2</a>
+  <a href="https://harmonkj.github.io/cssspacing/page3.html">Page 3</a>
+  <a href="https://harmonkj.github.io/cssspacing/page4.html">Page 4</a>
+   <a href="https://harmonkj.github.io/cssspacing/page5.html">Page 5</a>
+</div>
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #FF0000;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+</style>
+</head>
+<body>
+  
+
+
+
+
+
+
+</body>
+</html>
+
 
