--- a/home.html
+++ b/home.html
@@ -1,4 +1,7 @@
 <HTML>
+
+<link rel="stylesheet" href="style.css">
+
 <div class="topnav">
   <a href="https://harmonkj.github.io/cssspacing/home.html">Home</a>
   <a href="https://harmonkj.github.io/cssspacing/page2.html">Page 2</a>
