--- a/home.html
+++ b/home.html
@@ -1,6 +1,11 @@
-<HTML>
+<!DOCTYPE HTML>
 
-<link rel="stylesheet" href="style.css">
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Advanced CSS Selectors</title>
+  <link rel="stylesheet" href="style.css">
+  </head>
 
 <div class="topnav">
   <a href="https://harmonkj.github.io/cssspacing/home.html">Home</a>
