--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Advanced CSS Selectors</title>
+  <title>CSS SPACING</title>
   <link rel="stylesheet" href="style.css">
   </head>
 
