--- a/home.html
+++ b/home.html
@@ -53,9 +53,10 @@ body {
  
 
 <div class="box">
-     <p> CSS Selectors </p>
-    <p> CSS Selectors </p>
-    <p> CSS Selectors </p>
+      </div>
+<div class="box1">
+      </div>
+<div class="box2">
       </div>
 
 
