--- a/page1.html
+++ b/page1.html
@@ -8,7 +8,7 @@
   </head>
 
 <div class="topnav">
-  <a href="https://harmonkj.github.io/cssspacing/home.html">Home</a>
+  <a href="https://harmonkj.github.io/cssspacing/page1.html">Page 1</a>
   <a href="https://harmonkj.github.io/cssspacing/page2.html">Page 2</a>
   <a href="https://harmonkj.github.io/cssspacing/page3.html">Page 3</a>
   <a href="https://harmonkj.github.io/cssspacing/page4.html">Page 4</a>
