--- a/page3.html
+++ b/page3.html
@@ -1,6 +1,15 @@
-<HTML>
+
+<!DOCTYPE HTML>
+
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>CSS SPACING</title>
+  <link rel="stylesheet" href="style5.css">
+  </head>
+
 <div class="topnav">
-  <a href="https://harmonkj.github.io/cssspacing/home.html">Home</a>
+  <a href="https://harmonkj.github.io/cssspacing/page1.html">Page 1</a>
   <a href="https://harmonkj.github.io/cssspacing/page2.html">Page 2</a>
   <a href="https://harmonkj.github.io/cssspacing/page3.html">Page 3</a>
   <a href="https://harmonkj.github.io/cssspacing/page4.html">Page 4</a>
@@ -42,14 +51,20 @@ body {
 </style>
 </head>
 <body>
-  
+ 
 
+<div class="box">
+      </div>
 
+<div class="box1">
+      </div>
+
+<div class="box2">
+      </div>
 
 
 
 
 </body>
 </html>
-
 
